# energie-visualisateur

./: CMakeLists.txt  README.md  Vagrantfile  canvas_widget.cpp  canvas_widget.hpp  complex_widget.cpp  complex_widget.hpp  left_widget.cpp  left_widget.hpp  main.cpp  tabs_widget.cpp  tabs_widget.hpp  top_widget.cpp  top_widget.hpp
.vagrant/machines/default/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key  synced_folders  vagrant_cwd
